feat: Internationalize Terms and Privacy pages and fix refund policy HTML tags

--- a/privacy.html
+++ b/privacy.html
@@ -44,38 +44,38 @@
         <p class="last-updated" data-i18n="privacy.updated">Last updated: January 2025</p>
 
         <section>
-            <h2>1. Overview</h2>
-            <p>ECHO ("we") takes your privacy seriously. This Privacy Policy explains how we collect, use, store, and protect your personal information when using the ECHO application ("the App").</p>
-            <p>By using the App, you agree to the data processing practices described in this Privacy Policy.</p>
+            <h2 data-i18n="privacy.1.title">1. Overview</h2>
+            <p data-i18n="privacy.1.p1">ECHO ("we") takes your privacy seriously. This Privacy Policy explains how we collect, use, store, and protect your personal information when using the ECHO application ("the App").</p>
+            <p data-i18n="privacy.1.p2">By using the App, you agree to the data processing practices described in this Privacy Policy.</p>
         </section>
 
         <section>
-            <h2>2. Information We Collect</h2>
-            <h3>2.1 Information You Provide</h3>
-            <ul>
+            <h2 data-i18n="privacy.2.title">2. Information We Collect</h2>
+            <h3 data-i18n="privacy.2.1.title">2.1 Information You Provide</h3>
+            <ul data-i18n="privacy.2.1.list">
                 <li><strong>Account Information:</strong> Email address provided during registration</li>
                 <li><strong>Profile Information:</strong> Nickname, avatar, and other information you choose to provide</li>
                 <li><strong>Payment Information:</strong> Payment information when subscribing to PRO membership (processed by third-party payment platforms)</li>
             </ul>
             
-            <h3>2.2 Automatically Collected Information</h3>
-            <ul>
+            <h3 data-i18n="privacy.2.2.title">2.2 Automatically Collected Information</h3>
+            <ul data-i18n="privacy.2.2.list">
                 <li><strong>Learning Data:</strong> Study time, shadowing count, word lookup records, etc.</li>
                 <li><strong>Device Information:</strong> Device model, operating system version, app version</li>
                 <li><strong>Usage Data:</strong> Feature usage, crash reports</li>
             </ul>
 
-            <h3>2.3 Information We Do NOT Collect</h3>
-            <ul>
+            <h3 data-i18n="privacy.2.3.title">2.3 Information We Do NOT Collect</h3>
+            <ul data-i18n="privacy.2.3.list">
                 <li>Videos you import are not uploaded to our servers</li>
                 <li>Your shadowing recordings are stored locally on your device only</li>
             </ul>
         </section>
 
         <section>
-            <h2>3. How We Use Information</h2>
-            <p>We use the information we collect to:</p>
-            <ul>
+            <h2 data-i18n="privacy.3.title">3. How We Use Information</h2>
+            <p data-i18n="privacy.3.desc">We use the information we collect to:</p>
+            <ul data-i18n="privacy.3.list">
                 <li>Provide, maintain, and improve the App's features</li>
                 <li>Process your subscriptions and payments</li>
                 <li>Send you service-related notifications</li>
@@ -86,9 +86,9 @@
         </section>
 
         <section>
-            <h2>4. Information Sharing</h2>
-            <p>We do not sell your personal information. We may share your information in the following circumstances:</p>
-            <ul>
+            <h2 data-i18n="privacy.4.title">4. Information Sharing</h2>
+            <p data-i18n="privacy.4.desc">We do not sell your personal information. We may share your information in the following circumstances:</p>
+            <ul data-i18n="privacy.4.list">
                 <li><strong>Service Providers:</strong> We use third-party services (such as cloud storage, payment processing, analytics) to operate the App. These service providers can only access your information when performing services for us.</li>
                 <li><strong>Legal Requirements:</strong> We may disclose your information when required by law or to protect our rights.</li>
                 <li><strong>Business Transfers:</strong> In the event of a merger, acquisition, or asset sale, your information may be transferred as part of the transaction.</li>
@@ -96,74 +96,74 @@
         </section>
 
         <section>
-            <h2>5. Data Security</h2>
-            <p>We take reasonable technical and organizational measures to protect your personal information:</p>
-            <ul>
+            <h2 data-i18n="privacy.5.title">5. Data Security</h2>
+            <p data-i18n="privacy.5.desc">We take reasonable technical and organizational measures to protect your personal information:</p>
+            <ul data-i18n="privacy.5.list">
                 <li>HTTPS encryption for data transmission</li>
                 <li>Encrypted password storage</li>
                 <li>Regular security audits and vulnerability testing</li>
                 <li>Limited employee access to personal data</li>
             </ul>
-            <p>However, no Internet transmission or electronic storage method is 100% secure. We cannot guarantee absolute security.</p>
+            <p data-i18n="privacy.5.note">However, no Internet transmission or electronic storage method is 100% secure. We cannot guarantee absolute security.</p>
         </section>
 
         <section>
-            <h2>6. Data Retention</h2>
-            <p>We retain your personal information while you use the App. If you delete your account, we will delete or anonymize your personal data within 30 days, unless legally required to retain it longer.</p>
+            <h2 data-i18n="privacy.6.title">6. Data Retention</h2>
+            <p data-i18n="privacy.6.desc">We retain your personal information while you use the App. If you delete your account, we will delete or anonymize your personal data within 30 days, unless legally required to retain it longer.</p>
         </section>
 
         <section>
-            <h2>7. Your Rights</h2>
-            <p>Under applicable law, you may have the following rights:</p>
-            <ul>
+            <h2 data-i18n="privacy.7.title">7. Your Rights</h2>
+            <p data-i18n="privacy.7.desc">Under applicable law, you may have the following rights:</p>
+            <ul data-i18n="privacy.7.list">
                 <li><strong>Access:</strong> Request a copy of your personal information we hold</li>
                 <li><strong>Correction:</strong> Request correction of inaccurate personal information</li>
                 <li><strong>Deletion:</strong> Request deletion of your personal information</li>
                 <li><strong>Data Portability:</strong> Request export of your data in a common format</li>
                 <li><strong>Withdraw Consent:</strong> Withdraw your previously given consent at any time</li>
             </ul>
-            <p>To exercise these rights, contact support@adrian-m.top.</p>
+            <p data-i18n="privacy.7.contact">To exercise these rights, contact support@adrian-m.top.</p>
         </section>
 
         <section>
-            <h2>8. Cookies and Similar Technologies</h2>
-            <p>The App may use local storage and analytics tools to:</p>
-            <ul>
+            <h2 data-i18n="privacy.8.title">8. Cookies and Similar Technologies</h2>
+            <p data-i18n="privacy.8.desc">The App may use local storage and analytics tools to:</p>
+            <ul data-i18n="privacy.8.list">
                 <li>Remember your login status and preferences</li>
                 <li>Analyze app usage</li>
             </ul>
         </section>
 
         <section>
-            <h2>9. Children's Privacy</h2>
-            <p>The App is not directed at children under 13 years of age. We do not knowingly collect personal information from children under 13. If we discover we have collected a child's personal information, we will delete it immediately.</p>
+            <h2 data-i18n="privacy.9.title">9. Children's Privacy</h2>
+            <p data-i18n="privacy.9.desc">The App is not directed at children under 13 years of age. We do not knowingly collect personal information from children under 13. If we discover we have collected a child's personal information, we will delete it immediately.</p>
         </section>
 
         <section>
-            <h2>10. International Data Transfers</h2>
-            <p>Your information may be transferred to and stored on servers outside your country/region. We ensure appropriate safeguards are in place to protect your data.</p>
+            <h2 data-i18n="privacy.10.title">10. International Data Transfers</h2>
+            <p data-i18n="privacy.10.desc">Your information may be transferred to and stored on servers outside your country/region. We ensure appropriate safeguards are in place to protect your data.</p>
         </section>
 
         <section>
-            <h2>11. Third-Party Services</h2>
-            <p>The App may integrate the following third-party services:</p>
-            <ul>
+            <h2 data-i18n="privacy.11.title">11. Third-Party Services</h2>
+            <p data-i18n="privacy.11.desc">The App may integrate the following third-party services:</p>
+            <ul data-i18n="privacy.11.list">
                 <li><strong>Supabase:</strong> User authentication and data storage</li>
                 <li><strong>Paddle:</strong> Payment processing</li>
             </ul>
-            <p><strong>Note:</strong> Speech recognition (Vosk) is processed entirely on your device. No audio data is sent to external servers.</p>
-            <p>These third-party services have their own privacy policies, which we encourage you to review.</p>
+            <p data-i18n="privacy.11.note1"><strong>Note:</strong> Speech recognition (Vosk) is processed entirely on your device. No audio data is sent to external servers.</p>
+            <p data-i18n="privacy.11.note2">These third-party services have their own privacy policies, which we encourage you to review.</p>
         </section>
 
         <section>
-            <h2>12. Privacy Policy Updates</h2>
-            <p>We may update this Privacy Policy from time to time. Updated policies will be posted on this page, and we will notify you of significant changes through in-app notifications or email.</p>
+            <h2 data-i18n="privacy.12.title">12. Privacy Policy Updates</h2>
+            <p data-i18n="privacy.12.desc">We may update this Privacy Policy from time to time. Updated policies will be posted on this page, and we will notify you of significant changes through in-app notifications or email.</p>
         </section>
 
         <section>
-            <h2>13. Contact Us</h2>
-            <p>If you have any questions or concerns about this Privacy Policy, please contact us:</p>
-            <ul>
+            <h2 data-i18n="privacy.13.title">13. Contact Us</h2>
+            <p data-i18n="privacy.13.desc">If you have any questions or concerns about this Privacy Policy, please contact us:</p>
+            <ul data-i18n="privacy.13.list">
                 <li>Email: support@adrian-m.top</li>
             </ul>
         </section>
