--- a/terms.html
+++ b/terms.html
@@ -44,23 +44,22 @@
         <p class="last-updated" data-i18n="terms.updated">Last updated: January 2025</p>
 
         <section>
-            <h2>Legal Entity</h2>
-            <p>These Terms of Service ("Terms") govern your use of the ECHO mobile application ("App", "Service", "we", "us", or "our").</p>
-            <p><strong>Legal Business Name: ECHO</strong></p>
-            <p>ECHO is developed and operated by Adrian Cheng, an individual developer.</p>
-            <p>Contact: support@adrian-m.top</p>
+            <h2 data-i18n="terms.entity.title">Legal Entity</h2>
+            <p data-i18n="terms.entity.desc">These Terms of Service ("Terms") govern your use of the ECHO mobile application ("App", "Service", "we", "us", or "our").</p>
+            <p data-i18n="terms.entity.name"><strong>Legal Business Name: ECHO</strong></p>
+            <p data-i18n="terms.entity.dev">ECHO is developed and operated by Adrian Cheng, an individual developer.</p>
+            <p data-i18n="terms.entity.contact">Contact: support@adrian-m.top</p>
         </section>
 
         <section>
-            <h2>1. Acceptance of Terms</h2>
-            <p>Welcome to ECHO ("the App" or "we"). By accessing or using the App, you agree to be bound by these Terms of Service ("Terms"). If you do not agree to these Terms, please do not use the App.</p>
+            <h2 data-i18n="terms.1.title">1. Acceptance of Terms</h2>
+            <p data-i18n="terms.1.desc">Welcome to ECHO ("the App" or "we"). By accessing or using the App, you agree to be bound by these Terms of Service ("Terms"). If you do not agree to these Terms, please do not use the App.</p>
         </section>
 
-
         <section>
-            <h2>2. Service Description</h2>
-            <p>ECHO is a language learning application that provides:</p>
-            <ul>
+            <h2 data-i18n="terms.2.title">2. Service Description</h2>
+            <p data-i18n="terms.2.desc">ECHO is a language learning application that provides:</p>
+            <ul data-i18n="terms.2.list">
                 <li>Video import and subtitle generation</li>
                 <li>AI-powered pronunciation scoring</li>
                 <li>Word lookup and vocabulary collection</li>
@@ -70,46 +69,46 @@
         </section>
 
         <section>
-            <h2>3. User Account</h2>
-            <p>3.1 You need to create an account to use the full features of the App.</p>
-            <p>3.2 You are responsible for maintaining the security of your account and for all activities under your account.</p>
-            <p>3.3 You agree to provide true and accurate registration information.</p>
-            <p>3.4 If you discover any unauthorized use, please notify us immediately.</p>
+            <h2 data-i18n="terms.3.title">3. User Account</h2>
+            <p data-i18n="terms.3.p1">3.1 You need to create an account to use the full features of the App.</p>
+            <p data-i18n="terms.3.p2">3.2 You are responsible for maintaining the security of your account and for all activities under your account.</p>
+            <p data-i18n="terms.3.p3">3.3 You agree to provide true and accurate registration information.</p>
+            <p data-i18n="terms.3.p4">3.4 If you discover any unauthorized use, please notify us immediately.</p>
         </section>
 
         <section>
-            <h2>4. Subscription Services</h2>
-            <p>4.1 The App offers both free and PRO membership subscription services.</p>
-            <p>4.2 PRO membership subscription plans:</p>
-            <ul>
+            <h2 data-i18n="terms.4.title">4. Subscription Services</h2>
+            <p data-i18n="terms.4.p1">4.1 The App offers both free and PRO membership subscription services.</p>
+            <p data-i18n="terms.4.p2">4.2 PRO membership subscription plans:</p>
+            <ul data-i18n="terms.4.list">
                 <li>Monthly Plan: Billed monthly</li>
                 <li>Quarterly Plan: Billed every 3 months</li>
                 <li>Yearly Plan: Billed annually</li>
             </ul>
-            <p>4.3 Subscriptions will automatically renew at the end of each billing cycle unless you cancel before the renewal date.</p>
-            <p>4.4 After cancellation, you can continue to use PRO features until the end of the current billing cycle.</p>
+            <p data-i18n="terms.4.p3">4.3 Subscriptions will automatically renew at the end of each billing cycle unless you cancel before the renewal date.</p>
+            <p data-i18n="terms.4.p4">4.4 After cancellation, you can continue to use PRO features until the end of the current billing cycle.</p>
         </section>
 
         <section>
-            <h2>5. Refund Policy</h2>
-            <p>5.1 ECHO offers a 14-day money-back guarantee for all purchases.</p>
-            <p>5.2 You may request a full refund within 14 days of purchase for any reason.</p>
-            <p>5.3 To request a refund, email support@adrian-m.top with your purchase details.</p>
-            <p>5.4 Refunds will be processed within 5-10 business days to the original payment method.</p>
-            <p>5.5 For complete refund policy details, please see our <a href="refund.html">Refund Policy</a> page.</p>
+            <h2 data-i18n="terms.5.title">5. Refund Policy</h2>
+            <p data-i18n="terms.5.p1">5.1 ECHO offers a 14-day money-back guarantee for all purchases.</p>
+            <p data-i18n="terms.5.p2">5.2 You may request a full refund within 14 days of purchase for any reason.</p>
+            <p data-i18n="terms.5.p3">5.3 To request a refund, email support@adrian-m.top with your purchase details.</p>
+            <p data-i18n="terms.5.p4">5.4 Refunds will be processed within 5-10 business days to the original payment method.</p>
+            <p data-i18n="terms.5.p5">5.5 For complete refund policy details, please see our <a href="refund.html">Refund Policy</a> page.</p>
         </section>
 
         <section>
-            <h2>6. User Content</h2>
-            <p>6.1 Content you upload or import through the App (including videos and audio) is for personal learning purposes only.</p>
-            <p>6.2 You warrant that you have the right to use the content you upload and that it does not infringe any third-party rights.</p>
-            <p>6.3 We are not responsible for user-uploaded content.</p>
+            <h2 data-i18n="terms.6.title">6. User Content</h2>
+            <p data-i18n="terms.6.p1">6.1 Content you upload or import through the App (including videos and audio) is for personal learning purposes only.</p>
+            <p data-i18n="terms.6.p2">6.2 You warrant that you have the right to use the content you upload and that it does not infringe any third-party rights.</p>
+            <p data-i18n="terms.6.p3">6.3 We are not responsible for user-uploaded content.</p>
         </section>
 
         <section>
-            <h2>7. Prohibited Conduct</h2>
-            <p>When using the App, you may not:</p>
-            <ul>
+            <h2 data-i18n="terms.7.title">7. Prohibited Conduct</h2>
+            <p data-i18n="terms.7.desc">When using the App, you may not:</p>
+            <ul data-i18n="terms.7.list">
                 <li>Violate any applicable laws or regulations</li>
                 <li>Infringe on others' intellectual property rights</li>
                 <li>Upload content containing malware</li>
@@ -120,43 +119,43 @@
         </section>
 
         <section>
-            <h2>8. Intellectual Property</h2>
-            <p>8.1 The App's design, code, trademarks, icons, and other elements are our intellectual property.</p>
-            <p>8.2 Without written permission, you may not copy, modify, distribute, or create derivative works of the App.</p>
+            <h2 data-i18n="terms.8.title">8. Intellectual Property</h2>
+            <p data-i18n="terms.8.p1">8.1 The App's design, code, trademarks, icons, and other elements are our intellectual property.</p>
+            <p data-i18n="terms.8.p2">8.2 Without written permission, you may not copy, modify, distribute, or create derivative works of the App.</p>
         </section>
 
         <section>
-            <h2>9. Disclaimer</h2>
-            <p>9.1 The App is provided "as is" without any express or implied warranties.</p>
-            <p>9.2 We do not guarantee that the service will be uninterrupted or error-free.</p>
-            <p>9.3 Learning outcomes vary by individual; we make no guarantees about learning results.</p>
+            <h2 data-i18n="terms.9.title">9. Disclaimer</h2>
+            <p data-i18n="terms.9.p1">9.1 The App is provided "as is" without any express or implied warranties.</p>
+            <p data-i18n="terms.9.p2">9.2 We do not guarantee that the service will be uninterrupted or error-free.</p>
+            <p data-i18n="terms.9.p3">9.3 Learning outcomes vary by individual; we make no guarantees about learning results.</p>
         </section>
 
         <section>
-            <h2>10. Limitation of Liability</h2>
-            <p>To the maximum extent permitted by law, we shall not be liable for any direct, indirect, incidental, special, or consequential damages arising from the use or inability to use the App.</p>
+            <h2 data-i18n="terms.10.title">10. Limitation of Liability</h2>
+            <p data-i18n="terms.10.desc">To the maximum extent permitted by law, we shall not be liable for any direct, indirect, incidental, special, or consequential damages arising from the use or inability to use the App.</p>
         </section>
 
         <section>
-            <h2>11. Modification of Terms</h2>
-            <p>We may modify these Terms from time to time. Modified Terms will be posted on this page, and continued use of the App indicates acceptance of the modified Terms.</p>
+            <h2 data-i18n="terms.11.title">11. Modification of Terms</h2>
+            <p data-i18n="terms.11.desc">We may modify these Terms from time to time. Modified Terms will be posted on this page, and continued use of the App indicates acceptance of the modified Terms.</p>
         </section>
 
         <section>
-            <h2>12. Termination</h2>
-            <p>12.1 You may stop using the App and delete your account at any time.</p>
-            <p>12.2 If you violate these Terms, we have the right to suspend or terminate your account.</p>
+            <h2 data-i18n="terms.12.title">12. Termination</h2>
+            <p data-i18n="terms.12.p1">12.1 You may stop using the App and delete your account at any time.</p>
+            <p data-i18n="terms.12.p2">12.2 If you violate these Terms, we have the right to suspend or terminate your account.</p>
         </section>
 
         <section>
-            <h2>13. Governing Law</h2>
-            <p>These Terms are governed by the laws of the People's Republic of China. Any disputes arising from these Terms shall be resolved through negotiation; if negotiation fails, either party may file a lawsuit with a court of competent jurisdiction.</p>
+            <h2 data-i18n="terms.13.title">13. Governing Law</h2>
+            <p data-i18n="terms.13.desc">These Terms are governed by the laws of the People's Republic of China. Any disputes arising from these Terms shall be resolved through negotiation; if negotiation fails, either party may file a lawsuit with a court of competent jurisdiction.</p>
         </section>
 
         <section>
-            <h2>14. Contact Us</h2>
-            <p>If you have any questions about these Terms, please contact us:</p>
-            <ul>
+            <h2 data-i18n="terms.14.title">14. Contact Us</h2>
+            <p data-i18n="terms.14.desc">If you have any questions about these Terms, please contact us:</p>
+            <ul data-i18n="terms.14.list">
                 <li>Email: support@adrian-m.top</li>
             </ul>
         </section>
